# HabitTracker

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: .env.template  main.py
src/actions/: create_superuser.py
src/alembic/versions/: 2026_02_11_1029-918c879247af_create_users_table.py  2026_02_11_1558-53baa861bb4e_create_users_table.py  2026_02_11_2016-8e6b5e2f5bf5_create_access_tokens_table.py  2026_02_16_1654-79a53e7d9c6c_update_user_model.py  2026_02_16_1731-94d5443913b6_add_username_field_to_user_model.py  2026_02_16_1922-72117635fb89_add_habit_and_completion_models.py
src/api/: __init__.py
src/api/api_v1/: __init__.py  auth.py  completions.py  fastapi_users_router.py  habits.py  users.py
src/api/api_v1/stats/: __init__.py  count_stats.py
src/api/dependencies/: users.py
src/api/dependencies/authentication/: access_tokens.py  strategy.py  (+1 more)
src/core/: cache.py  config.py  redis_client.py
src/core/authentication/: user_manager.py
src/core/models/: __init__.py  access_token.py  base.py  completion.py  db_helper.py  habit.py  user.py
src/core/schemas/: completion.py  habit.py  stat.py  user.py
src/crud/: users.py
src/mailing/: send_email.py  send_email_confirmed.py  send_verification_email.py
src/mailing/email_verification/: __init__.py
src/mailing/password_reset_email/: __init__.py  send_password_reset_email.py  send_success_password_reset_password_email.py
src/services/: completion.py  habit.py  statistic.py
src/templates/mailing/: base.html
src/utils/: __init__.py  case_converter.py  checker.py
(+8 files in other folders)
