[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "black>=26.1.0",
    "fastapi>=0.128.7",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "jinja2>=3.1.6",
    "orjson>=3.11.7",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn[standard]>=0.40.0",
]
[dependency-groups]
dev = [
    "black>=26.1.0",
]